# bsc_metadata_archeology

./: .dockerignore  .dtuhpc.default.toml  .dtuhpc.toml  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  cloudbuild.yaml  interface.py  pyproject.toml  requirements.txt  setup.py  t.py  test.py
.github/workflows/: flake8.yml  isort  isort.yml
config/: default_config.yaml
config/dataset/: cifar10-1x-gpu.yaml  cifar10-c-score.yaml  cifar10.yaml  cifar100-c-score.yaml  cifar100-mem-score.yaml  cifar100.yaml  imagenet-c-score-vit.yaml  imagenet-c-score.yaml  imagenet-distributed.yaml  imagenet-mem-score.yaml  imagenet.yaml  imagenet_wds.yaml  speechcommands-proxy.yaml  speechcommands.yaml
config/imagenet/: default_config.yaml
config/model/: cifar-defaults.yaml  cifar-resnet50-defaults.yaml  cifar-vit-defaults.yaml  (+13 more)
docs/: Makefile  conf.py  make.bat
eh/: LICENSE  Makefile  README.md
jobs/: convert-imagenet.toml  make-dataset.toml  make-dataset_cifar10.toml  make-dataset_cifar100.toml  plots.toml  train-cifar10-1gpu.toml  train-cifar10-vit.toml  train-cifar10.toml  train-cifar100-1x-gpu.toml  train-cifar100.toml  train-imagenet-1x-gpu.toml  train-imagenet-2x.toml  train-imagenet-dev.toml  train-imagenet-vit.toml  train-imagenet-wds.toml  train-imagenet.toml  train-model-dev.toml  train-model-distributed.toml  train-model-single.toml  train-model.toml  update-dependencies.toml  update_dependencies.toml
logs/: .gitignore
models/: losses_v1.pt
notebooks/: audio_test.ipynb  loss_dataset_test.ipynb  test_probes.ipynb  test_proxy_dataset.ipynb
(+175 files in other folders)
